--- a/server/app/templates/index.html
+++ b/server/app/templates/index.html
@@ -4,36 +4,50 @@
 
 {% block content %}
 <h1>Robot Control</h1>
-<img id="video" src="{{ url_for('main.video_feed') }}" style="display: none;">
-<button onclick="startStream()">Start Stream</button>
-<button onclick="stopStream()">Stop Stream</button>
-<br>
-<button onclick="sendCommand('forward')">Move Forward</button>
-<button onclick="sendCommand('stop')">Stop</button>
+<div id="videoContainer">
+    <img id="video" src="" alt="Camera feed will appear here">
+</div>
+<img id="video" src="" style="display: none;">
+<div id="buttonContainer">
+    <button id="startStreamButton">Start Stream</button>
+    <button id="stopStreamButton">Stop Stream</button>
+    <button id="fullscreenButton">Fullscreen</button>
+    <br>
+    <button id="moveForwardButton">Move Forward</button>
+    <button id="stopButton">Stop</button>
+</div>
+
 <h1>Press a button on your gamepad to see it detected here</h1>
 <div id="gamepadStatus">No gamepad connected</div>
-
 
 <!-- Joystick Container -->
 <div id="joystickContainer">
     <div id="joystick"></div>
 </div>
 
-
 <script type="module">
-    import Joystick from '/static/js/joystick.js';  
-    
-    function startStream() {
-        document.getElementById('video').style.display = 'block';
-        document.getElementById('video').src = '{{ url_for("main.video_feed") }}';
-    }
+    import Joystick from '/static/js/joystick.js';
+    import StreamController from '/static/js/streamController.js';
 
-    function stopStream() {
-        document.getElementById('video').style.display = 'none';
-        fetch('{{ url_for("main.stop_feed") }}');
-    }
+    document.addEventListener('DOMContentLoaded', () => {
+        const videoUrl = '{{ url_for("main.video_feed") }}';
+        const stopUrl = '{{ url_for("main.stop_feed") }}';
+        const streamController = new StreamController('video');
+        streamController.initialize(videoUrl, stopUrl);
+        const joystick = new Joystick('joystickContainer', 'joystick');
 
+        document.getElementById('startStreamButton').addEventListener('click', () => {
+            streamController.startStream(videoUrl);
+        });
 
-    const joystick = new Joystick('joystickContainer', 'joystick');
+        document.getElementById('stopStreamButton').addEventListener('click', () => {
+            streamController.stopStream(stopUrl);
+        });
+
+        document.getElementById('fullscreenButton').addEventListener('click', () => {
+            streamController.toggleFullscreen();
+        });
+
+    });
 </script>
 {% endblock %}
