--- a/server/app/static/css/styles.css
+++ b/server/app/static/css/styles.css
@@ -1,44 +1,96 @@
-/* styles.css */
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #3a2626;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    overflow-y: auto;  
 }
 
 h1 {
     text-align: center;
     color: #333;
+    margin-top: 20px;  
+}
+
+#fullscreenContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;  
+    position: relative;
 }
 
 #videoContainer {
     width: 640px;
     height: 480px;
-    margin: 20px auto;
-    border: 2px solid #333;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #eee;
+    border: 2px solid #333;
 }
 
 #video {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: contain; 
+}
+
+#controlContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    bottom: 20px; /* Position near the bottom */
+    right: 20px;
+    z-index: 1000;
+}
+
+#joystickContainer {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background: #ddd;
+    border-radius: 50%;
+    bottom: 20px;  
+    z-index: 1000; 
+
+}
+
+#joystick {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: #333;
+    border-radius: 50%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #buttonContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    z-index: 1000; 
+    bottom: 200px;   
     align-items: center;
     gap: 10px;
 }
 
 button {
     display: inline-block;
-    margin: 10px;
     padding: 10px 20px;
+    gap: 10px;
     font-size: 16px;
     color: #fff;
     background-color: #333;
@@ -57,26 +109,4 @@ button:hover {
     font-size: 18px;
     margin: 20px;
     color: #666;
-}
-
-/* Joystick Container */
-#joystickContainer {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    background: #ddd;
-    border-radius: 50%;
-    margin: 20px auto;
-}
-
-/* Joystick */
-#joystick {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    background: #333;
-    border-radius: 50%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
 }
