--- a/server/app/templates/register.html
+++ b/server/app/templates/register.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% block title %}Login{% endblock %}
+{% block title %}Register{% endblock %}
 {% block content %}
-    <h2>Login</h2>
-    <form method="POST" action="{{ url_for('auth.login') }}">
+    <h2>Register</h2>
+    <form method="POST" action="{{ url_for('register') }}">
         {{ form.hidden_tag() }}
         <div class="form-group">
             {{ form.username.label(class="form-control-label") }}
@@ -11,6 +11,10 @@
         <div class="form-group">
             {{ form.password.label(class="form-control-label") }}
             {{ form.password(class="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.confirm_password.label(class="form-control-label") }}
+            {{ form.confirm_password(class="form-control") }}
         </div>
         <div class="form-group">
             {{ form.submit(class="btn btn-primary") }}
